[gd_scene load_steps=5 format=3 uid="uid://h6mc1y4w8et0"]

[ext_resource type="Script" path="res://Scripts/start.gd" id="1_dd7lq"]
[ext_resource type="Texture2D" uid="uid://ck88g1qxwxt7x" path="res://assets/StartScreen/0.png" id="1_e8xnd"]
[ext_resource type="Texture2D" uid="uid://bsb6xl7n0pv2t" path="res://assets/StartScreen/1.png" id="2_bm0yu"]
[ext_resource type="Texture2D" uid="uid://b811bunctlx2a" path="res://assets/StartScreen/Title.png" id="4_8wo6r"]

[node name="Start" type="CanvasLayer"]
script = ExtResource("1_dd7lq")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartBTN" type="TextureButton" parent="ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -432.0
offset_top = 55.0
offset_right = -36.0
offset_bottom = 191.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_e8xnd")
stretch_mode = 0

[node name="ExitBTN" type="TextureButton" parent="ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 11.0
offset_top = 55.0
offset_right = 412.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_bm0yu")
stretch_mode = 0

[node name="Game_Version" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -94.0
offset_top = -45.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.277528, 0.277528, 0.277528, 1)
theme_override_font_sizes/font_size = 25

[node name="Title" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(940, 379)
scale = Vector2(18.8289, 18.8289)
texture = ExtResource("4_8wo6r")

[connection signal="pressed" from="ColorRect/StartBTN" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="ColorRect/ExitBTN" to="." method="_on_exit_btn_pressed"]
